--- a/report_en.tex
+++ b/report_en.tex
@@ -65,9 +65,9 @@
 
 \begin{document}
 
-\hypertarget{header-n0}{%
+\hypertarget{header-n320}{%
 \section{Experimental report for the 2021 COM1005 Assignment: The
-Rambler's Problem}\label{header-n0}}
+Rambler's Problem}\label{header-n320}}
 
 \begin{itemize}
 \item
@@ -77,9 +77,9 @@ Rambler's Problem}\label{header-n0}}
   Date: 2021/05/24
 \end{itemize}
 
-\hypertarget{header-n7}{%
+\hypertarget{header-n327}{%
 \subsection{Description of my branch-and-bound
-implementation}\label{header-n7}}
+implementation}\label{header-n327}}
 
 Maintain two lists
 
@@ -125,8 +125,8 @@ When the \emph{open} list is not empty, perform the following operations
   \end{enumerate}
 \end{enumerate}
 
-\hypertarget{header-n33}{%
-\subsection{Description of my A* implementation}\label{header-n33}}
+\hypertarget{header-n353}{%
+\subsection{Description of my A* implementation}\label{header-n353}}
 
 Maintain two lists
 
@@ -174,9 +174,9 @@ when the node \emph{n} is selected from \emph{open}, according to the
 estimated result of the heuristic function \emph{Estimated Remained
 Cost}.
 
-\hypertarget{header-n56}{%
+\hypertarget{header-n376}{%
 \subsection{Assessing the efficiency of my branch-and-bound search
-algorithm}\label{header-n56}}
+algorithm}\label{header-n376}}
 
 The following are three sets of experiments. The map data used in each
 set of experiments comes from the file "diablo.pgm". The software in the
@@ -265,9 +265,9 @@ be guided by this local optimal solution, thus performing a large number
 of additional calculations. , Although these local optimal solutions may
 be far from the global optimal solution.
 
-\hypertarget{header-n86}{%
+\hypertarget{header-n406}{%
 \subsection{Assessing the efficiency of my A* search
-algorithm}\label{header-n86}}
+algorithm}\label{header-n406}}
 
 Use the same experiment as the previous topic, but use the A* version of
 the algorithm
@@ -438,8 +438,8 @@ shows that as long as the heuristic function \(H\) can accurately
 describe the gradient change from the node to the target, then * A**
 algorithm can accurately find the target.
 
-\hypertarget{header-n143}{%
-\subsection{Comparing the two search strategies}\label{header-n143}}
+\hypertarget{header-n463}{%
+\subsection{Comparing the two search strategies}\label{header-n463}}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -498,8 +498,8 @@ algorithm can accurately find the target.
   \end{itemize}
 \end{enumerate}
 
-\hypertarget{header-n168}{%
-\subsection{Conclusions}\label{header-n168}}
+\hypertarget{header-n488}{%
+\subsection{Conclusions}\label{header-n488}}
 
 Through this lab homework, I learned
 
@@ -515,5 +515,11 @@ Through this lab homework, I learned
 \item
   Dynamic planning ideas.
 \end{itemize}
+
+\begin{figure}
+\centering
+\includegraphics{D:/projects/COM1005_Assignment_2021/COM1005_Assignment_2021/report_md/images/panda.png}
+\caption{}
+\end{figure}
 
 \end{document}
