--- a/report_en.tex
+++ b/report_en.tex
@@ -200,7 +200,7 @@ a certain coordinate on the map.
 
     \begin{figure}
     \centering
-    \includegraphics{D:/projects/COM1005_Assignment_2021/COM1005_Assignment_2021/report_md/images/image-20210523071650111.png}
+    \includegraphics{./images/image-20210523071650111.png}
     \caption{}
     \end{figure}
   \end{itemize}
@@ -216,13 +216,13 @@ a certain coordinate on the map.
 
     \begin{figure}
     \centering
-    \includegraphics{D:/projects/COM1005_Assignment_2021/COM1005_Assignment_2021/report_md/images/image-20210523071939104.png}
+    \includegraphics{./images/image-20210523071939104.png}
     \caption{}
     \end{figure}
 
     \begin{figure}
     \centering
-    \includegraphics{D:/projects/COM1005_Assignment_2021/COM1005_Assignment_2021/report_md/images/image-20210523071951327.png}
+    \includegraphics{./images/image-20210523071951327.png}
     \caption{}
     \end{figure}
   \end{itemize}
@@ -238,13 +238,13 @@ a certain coordinate on the map.
 
     \begin{figure}
     \centering
-    \includegraphics{D:/projects/COM1005_Assignment_2021/COM1005_Assignment_2021/report_md/images/image-20210523072848208.png}
+    \includegraphics{./images/image-20210523072848208.png}
     \caption{}
     \end{figure}
 
     \begin{figure}
     \centering
-    \includegraphics{D:/projects/COM1005_Assignment_2021/COM1005_Assignment_2021/report_md/images/image-20210523072945713.png}
+    \includegraphics{./images/image-20210523072945713.png}
     \caption{}
     \end{figure}
   \end{itemize}
@@ -286,7 +286,7 @@ the algorithm
 
       \begin{figure}
       \centering
-      \includegraphics{D:/projects/COM1005_Assignment_2021/COM1005_Assignment_2021/report_md/images/image-20210523082215544.png}
+      \includegraphics{./images/image-20210523082215544.png}
       \caption{}
       \end{figure}
     \item
@@ -294,7 +294,7 @@ the algorithm
 
       \begin{figure}
       \centering
-      \includegraphics{D:/projects/COM1005_Assignment_2021/COM1005_Assignment_2021/report_md/images/image-20210523082848030.png}
+      \includegraphics{./images/image-20210523082848030.png}
       \caption{}
       \end{figure}
     \end{itemize}
@@ -312,13 +312,13 @@ the algorithm
 
       \begin{figure}
       \centering
-      \includegraphics{D:/projects/COM1005_Assignment_2021/COM1005_Assignment_2021/report_md/images/image-20210523082247436.png}
+      \includegraphics{./images/image-20210523082247436.png}
       \caption{}
       \end{figure}
 
       \begin{figure}
       \centering
-      \includegraphics{D:/projects/COM1005_Assignment_2021/COM1005_Assignment_2021/report_md/images/image-20210523082304339.png}
+      \includegraphics{./images/image-20210523082304339.png}
       \caption{}
       \end{figure}
     \item
@@ -326,13 +326,13 @@ the algorithm
 
       \begin{figure}
       \centering
-      \includegraphics{D:/projects/COM1005_Assignment_2021/COM1005_Assignment_2021/report_md/images/image-20210523083212866.png}
+      \includegraphics{./images/image-20210523083212866.png}
       \caption{}
       \end{figure}
 
       \begin{figure}
       \centering
-      \includegraphics{D:/projects/COM1005_Assignment_2021/COM1005_Assignment_2021/report_md/images/image-20210523083225750.png}
+      \includegraphics{./images/image-20210523083225750.png}
       \caption{}
       \end{figure}
     \end{itemize}
@@ -350,13 +350,13 @@ the algorithm
 
       \begin{figure}
       \centering
-      \includegraphics{D:/projects/COM1005_Assignment_2021/COM1005_Assignment_2021/report_md/images/image-20210523082345704.png}
+      \includegraphics{./images/image-20210523082345704.png}
       \caption{}
       \end{figure}
 
       \begin{figure}
       \centering
-      \includegraphics{D:/projects/COM1005_Assignment_2021/COM1005_Assignment_2021/report_md/images/image-20210523082417053.png}
+      \includegraphics{./images/image-20210523082417053.png}
       \caption{}
       \end{figure}
     \item
@@ -364,13 +364,13 @@ the algorithm
 
       \begin{figure}
       \centering
-      \includegraphics{D:/projects/COM1005_Assignment_2021/COM1005_Assignment_2021/report_md/images/image-20210523083353747.png}
+      \includegraphics{./images/image-20210523083353747.png}
       \caption{}
       \end{figure}
 
       \begin{figure}
       \centering
-      \includegraphics{D:/projects/COM1005_Assignment_2021/COM1005_Assignment_2021/report_md/images/image-20210523083415438.png}
+      \includegraphics{./images/image-20210523083415438.png}
       \caption{}
       \end{figure}
     \end{itemize}
@@ -518,7 +518,7 @@ Through this lab homework, I learned
 
 \begin{figure}
 \centering
-\includegraphics{D:/projects/COM1005_Assignment_2021/COM1005_Assignment_2021/report_md/images/panda.png}
+\includegraphics{./images/panda.png}
 \caption{}
 \end{figure}
 
